Fri Mar 25 07:02:59 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* ace/config-win32-common.h:

	  Define ACE_INT64_TYPE and ACE_UINT64_TYPE macros instead of
	  actual typedef definitions.

Thu Mar 24 23:42:34 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* ace/Basic_Types.h:

	  Fix typo in ACE_SIZEOF_LONG_LONG definition for systems with
	  ACE_LACKS_LONG_LONG set.

	  Set ACE_SIZEOF_LONG_LONG to 8 if we can't figure out what to set
	  it to from ULLONG_MAX or ULONGLONG_MAX, which may not be present
	  or may need special contortions to be defined.

Thu Mar 24 12:27:05 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* ace/README:

	  Describe ACE_{,U}INT{8,16,32,64}_FORMAT_SPECIFIER macros.

	  Describe ACE_{,U}INT{8,16,32,64}_TYPE macros.

	* ace/Basic_Types.h:

	  Decouple the conditionals used to set the ACE_SIZEOF_{SHORT,INT,
	  LONG,LONG_LONG} macros from those used to define the
	  ACE_{,U}INT{8,16,32,64} types.

	  Removed cases for specific CPUs and OSs, but provide a mechanism
	  where values can be set in platform specific config-*.h headers.

Thu Mar 24 11:26:58 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* ace/README:

	  Describe ACE_HAS_{,U}INT{8,16,32,64}_T macros.

	* configure.ac:

	  Added check for {,u}int{8,16,32,64}_t types and set
	  ACE_HAS_{,U}INT32_T if found.

Thu Mar 24 13:23:00 2005  Rich Seibel  <seibel_r@ociweb.com>

        Moving updates for Mac made by Paul and Chad  to get it to work.

        * include/makeinclude/platform_macosx.GNU:

          Explicitly default the threads variable to threads=1.  This
          was preventing ACE_TMCast from building.
          Change the optimization option to -O2.  -O3 was causing some
          link problems in the IDL compiler.

        * bin/MakeProjectCreator/config/ftorbutils.mpb:

          Add a dependency on the PortableGroup library.  This is
          part of cleaning up the linkage between PortableGroup and
          some of the FT* libraries.
